# ChangeLog for dev-perl/Params-Util
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Params-Util/ChangeLog,v 1.54 2007/12/17 18:50:01 drac Exp $

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> Params-Util-0.30.ebuild:
  amd64 stable

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> Params-Util-0.30.ebuild:
  alpha/ia64/sparc/x86 stable

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Params-Util-0.25.ebuild:
  amd64 stable

*Params-Util-0.30 (26 Oct 2007)

  26 Oct 2007; Christian Hartmann <ian@gentoo.org> +Params-Util-0.30.ebuild:
  Version bump

*Params-Util-0.29 (19 Oct 2007)

  19 Oct 2007; Christian Hartmann <ian@gentoo.org> +Params-Util-0.29.ebuild:
  Version bump

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Params-Util-0.25.ebuild:
  Stable on ppc.

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org> Params-Util-0.25.ebuild:
  alpha/ia64/x86 stable

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Params-Util-0.25.ebuild:
  Marking sparc stable

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Params-Util-0.23.ebuild, Params-Util-0.24.ebuild:
  Marking sparc stable

*Params-Util-0.25 (24 May 2007)

  24 May 2007; Michael Cummings <mcummings@gentoo.org>
  +Params-Util-0.25.ebuild:
  Version bump

*Params-Util-0.24 (12 May 2007)

  12 May 2007; Michael Cummings <mcummings@gentoo.org>
  +Params-Util-0.24.ebuild:
  Version bump

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Params-Util-0.22.ebuild:
  ppc stable

*Params-Util-0.23 (11 Mar 2007)

  11 Mar 2007; Michael Cummings <mcummings@gentoo.org>
  +Params-Util-0.23.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Params-Util-0.22.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  Params-Util-0.22.ebuild:
  Stable on Alpha + IA64.

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Params-Util-0.22.ebuild:
  marking sparc stable
